<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >
    
	<ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/button2003" 
        android:contentDescription="@string/button2003" 
        android:onClick="onClickWrong"/>

	<ImageButton
	    android:id="@+id/imageButton3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/imageButton2"
	    android:layout_below="@+id/imageButton2"
	    android:src="@drawable/button2005" 
        android:contentDescription="@string/button2005"
        android:onClick="onClickCorrect"/>

	<ImageButton
	    android:id="@+id/imageButton2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/imageButton1"
	    android:layout_below="@+id/imageButton1"
	    android:src="@drawable/button2004"
        android:contentDescription="@string/button2004"
        android:onClick="onClickWrong"/>

	<ImageButton
	    android:id="@+id/imageButton4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/imageButton3"
	    android:layout_below="@+id/imageButton3"
	    android:src="@drawable/button2006"
        android:contentDescription="@string/button2006"
        android:onClick="onClickWrong"/>

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="26dp"
	    android:paddingBottom="5dp"
	    android:text="@string/version"
	    style="@style/VersionFont" />

</RelativeLayout>